--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">YOUNIFIRST</string>
-    
+
     <string name="underline_ketentuanpg"><u>Ketentuan Penggunaan</u></string>
     <string name="underline_kebijakan"><u>Kebijakan Privasi</u></string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
