Tambah Forum Commmit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,27 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="info_text">Untuk masalah lain seperti spam atau penipuan, Anda bisa mendapatkan bantuan atau hubungi tim kami di <b>Pusat Bantuan</b>.</string>
+
+    <string name="aom_description">
+🎟 [VOYAGER 2 TIKET KONSER AOM 11.0] 🎟
+
+Halo, Kawan Lanara! 🌙
+Waktunya berpetualang lebih jauh lagi di Art of Manunggalan 11.0! 🚀✨
+Setelah antusiasme luar biasa di tahap pertama, kini VOYAGER 2 resmi dibuka! 🔥
+
+Jangan sampai ketinggalan kesempatan buat jadi bagian dari malam paling spektakuler tahun ini bersama bintang tamu utama yang siap mengguncang Lapangan Hijau A3, Politeknik Negeri Jember, 22 November 2025! 🌟
+
+💸 Harga Tiket VOYAGER 2: Rp80.000
+Tiket terbatas, vibes-nya tak terbatas! ⚡
+
+Segera amankan tiketmu dan rasakan pengalaman konser penuh energi, musik, dan kebersamaan yang cuma ada di AOM 11.0! 🎤🎶
+
+✨ Karena setiap langkah di Voyager adalah perjalanan menuju malam penuh cahaya dan suara!
+
+‼ Tiket ini TERBUKA UNTUK UMUM!
+Ajak teman, saudara, alumni, atau siapa pun yang pengen ngerasain vibes-nya Lanara! 💥
+
+#AOM11 #LanaraFest #Voyager2 #AOM2025 #PolijeEvent #HMJTI #PoliteknikNegeriJember #ArtOfManunggalan #BersinergiDariHati #KawanLanara #KonserKampus #EventJember #KonserPolije #LanaraBersuara #AOMisBack #FestivalMusik #KonserJTI #LanaraOnStage #CampusEvent #PolijeJember #MahasiswaTI #TIHebat #EventPolije #JemberEvent #LanaraVibes #AOMStage #VoyagerTicket #LanaraJourney #AOMConcert
+</string>
+
 </resources>
